src/globalStyles/index.scss
@import '~sanitize.css';
@import './html5doctor.css';
@import './fonts.css';
@import './slick.scss';

/*variables*/

$font-primary: sans-serif;
$font-fallback-primary: Helvetica;
$font-fallback-secondary: Arial;
$font-family-primary: 'Helsinki Grotesk Regular';
$font-size-primary: 12px;

/* set base values */
$text-base-size: 1em;
$text-scale-ratio: 1.2;

/* see https://css-tricks.com/snippets/css/system-font-stack/ */

$font-family: $font-family-primary, $font-fallback-primary,
  $font-fallback-secondary, $font-primary;

/* type scale */
$text-xs: calc($text-base-size / ($text-scale-ratio * $text-scale-ratio));
$text-sm: calc($text-base-size / var(--text-scale-ratio));
$text-md: calc($text-base-size * var(--text-scale-ratio));
$text-lg: calc(
  $text-base-size * var(--text-scale-ratio) * var(--text-scale-ratio)
);
$text-xl: calc(
  $text-base-size * var(--text-scale-ratio) * var(--text-scale-ratio) *
    var(--text-scale-ratio)
);
$text-xxl: calc(
  $text-base-size * var(--text-scale-ratio) * var(--text-scale-ratio) *
    var(--text-scale-ratio) * var(--text-scale-ratio)
);
$text-xxxl: calc(
  $text-base-size * var(--text-scale-ratio) * var(--text-scale-ratio) *
    var(--text-scale-ratio) * var(--text-scale-ratio) * var(--text-scale-ratio)
);

:root {
  font-size: $font-size-primary;
}

/* rewrite libraries*/

.slick-slider {
  margin-right: -2rem;
  margin-left: -2rem;
  box-sizing: border-box;
}

.slick-list {
  padding-left: 1rem;
}

.slick-slide {
  box-sizing: border-box;
  padding-right: 1rem;
}

/* own css*/

body {
  overflow-x: hidden;
  height: 100vh;
  // arbitrary max-width of 474px for wide screens
  max-width: 474px;
  margin: 0 auto;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;

  font-size: $text-base-size;
  font-family: $font-family;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;

  color: black;

  #root {
    width: 100%;
    min-height: 100%;
    overflow-x: hidden;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
  }

  .map {
    width: 100%;
    height: 100vh;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }
}

